Made the code backwards compatible with JDK 1.7 due to 7 Hills limitations